Add new post-5.html for PyTorch training and update index/sidebar links

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
                         <li><a href="post-2.html">Feb 22, 2026</a></li>
                         <li><a href="post-template.html">Feb 18, 2026</a></li>
                     </ul>
-                    <h3 style="margin-top: 1.5rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
+                    <h3
+                        style="margin-top: 1.5rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
                         LLM Build</h3>
                     <ul>
+                        <li><a href="post-5.html">Feb 25, 2026</a></li>
                         <li><a href="post-3.html">Feb 24, 2026</a></li>
                         <li><a href="post-4.html">Feb 23, 2026</a></li>
                     </ul>
@@ -61,6 +63,19 @@
                         broader
                         subjects related to AI architecture.</p>
                     <div class="grid">
+                        <!-- Article Card 5 -->
+                        <a href="post-5.html" id="post-5" class="card fade-up">
+                            <div class="card-inner">
+                                <div class="card-tag">PYTORCH FOR TRAINING NEURAL NETWORKS: LLM BUILD</div>
+                                <h3 class="card-title">PyTorch For Training Neural Networks</h3>
+                                <p class="card-desc">What PyTorch actually gives you — tensors, layers, automatic
+                                    gradients, and optimizers — explained plainly.</p>
+                                <div class="card-meta">
+                                    <span>Feb 25, 2026</span>
+                                </div>
+                            </div>
+                        </a>
+
                         <!-- Article Card 3 -->
                         <a href="post-3.html" id="post-3" class="card fade-up">
                             <div class="card-inner">
