--- a/post-3.html
+++ b/post-3.html
@@ -45,6 +45,7 @@
                         style="margin-top: 1.5rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
                         LLM Build</h3>
                     <ul>
+                        <li><a href="post-5.html">Feb 25, 2026</a></li>
                         <li><a href="post-3.html">Feb 24, 2026</a></li>
                         <li><a href="post-4.html">Feb 23, 2026</a></li>
                     </ul>
