Shorten tag labels for tokenizer and PyTorch posts

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <!-- Article Card 5 -->
                         <a href="post-5.html" id="post-5" class="card fade-up">
                             <div class="card-inner">
-                                <div class="card-tag">PYTORCH FOR TRAINING NEURAL NETWORKS: LLM BUILD</div>
+                                <div class="card-tag">PYTORCH : LLM BUILD</div>
                                 <h3 class="card-title">PyTorch For Training Neural Networks</h3>
                                 <p class="card-desc">What PyTorch actually gives you — tensors, layers, automatic
                                     gradients, and optimizers — explained plainly.</p>
@@ -79,7 +79,7 @@
                         <!-- Article Card 3 -->
                         <a href="post-3.html" id="post-3" class="card fade-up">
                             <div class="card-inner">
-                                <div class="card-tag">SETTING UP A TOKENIZER: LLM BUILD</div>
+                                <div class="card-tag">TOKENIZER: LLM BUILD</div>
                                 <h3 class="card-title">Setting up a tokenizer</h3>
                                 <p class="card-desc">An LLM never sees text; only integers. Its inputs and outputs are
                                     all represented as sequences of token IDs. This is why we use a tokenizer to convert
