--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             <main class="os-content">
                 <section id="posts">
                     <p style="text-align: center; max-width: 800px; margin-inline: auto; margin-bottom: 4rem; color: var(--text-secondary); font-size: 1.25rem; line-height: 1.6;"
-                        class="fade-up">This blog chronicles the ongoing development of Milo, a long-term agent project,
+                        class="fade-up">This open notebook chronicles the ongoing development of Milo, a long-term agent
+                        project,
                         detailing
                         its evolution alongside other agent experiments and the tools I'm creating. I also dive into
                         broader
