--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
                         Milo</h3>
                     <ul>
+                        <li><a href="post-6.html">Feb 28, 2026</a></li>
                         <li><a href="post-2.html">Feb 22, 2026</a></li>
                         <li><a href="post-template.html">Feb 18, 2026</a></li>
                     </ul>
@@ -64,6 +65,19 @@
                         broader
                         subjects related to AI architecture.</p>
                     <div class="grid">
+                        <!-- Article Card 6 -->
+                        <a href="post-6.html" id="post-6" class="card fade-up">
+                            <div class="card-inner">
+                                <div class="card-tag">TELEGRAM : MILO</div>
+                                <h3 class="card-title">Telegram for Agent Communication</h3>
+                                <p class="card-desc">Setting up Telegram as the communication layer for Milo using
+                                    BotFather and pyTelegramBotAPI, with message polling and deduplication.</p>
+                                <div class="card-meta">
+                                    <span>Feb 28, 2026</span>
+                                </div>
+                            </div>
+                        </a>
+
                         <!-- Article Card 5 -->
                         <a href="post-5.html" id="post-5" class="card fade-up">
                             <div class="card-inner">
