--- a/post-5.html
+++ b/post-5.html
@@ -39,6 +39,7 @@
                     <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
                         Milo</h3>
                     <ul>
+                        <li><a href="post-6.html">Feb 28, 2026</a></li>
                         <li><a href="post-2.html">Feb 22, 2026</a></li>
                         <li><a href="post-template.html">Feb 18, 2026</a></li>
                     </ul>
